--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,4 @@
+<%- include('_header') %>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,3 +10,4 @@
     
 </body>
 </html>
+<%- include('_footer') %>
