--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,3 +1,4 @@
+<%- include('_header') %>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,3 +14,4 @@
     </form>
 </body>
 </html>
+<%- include('_footer') %>
